[tool.poetry]
name = "assignment1"
version = "0.1.0"
description = ""
authors = ["Jake"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
